--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SkewHyperbolic
 Type: Package
-Version: 0.1-2
-Date: 2009-10-08
+Version: 0.2-0
+Date: 2010-02-10
 Title: The Skew Hyperbolic Student t-distribution
 Author: David Scott <d.scott@auckland.ac.nz>, Fiona Grimson
 Maintainer: David Scott <d.scott@auckland.ac.nz>
-Depends: R (>= 2.3.0), HyperbolicDist(>= 0.6-2)
+Depends: R (>= 2.3.0), DistributionUtils, GeneralizedHyperbolic
 Encoding: latin1
 Description: Functions are provided for the density function,
         distribution function, quantiles and random number generation
@@ -17,8 +17,6 @@ Description: Functions are provided for the density function,
         functions to generate a Q-Q plot and a P-P plot.
 License: GPL (>= 2)
 LazyLoad: yes
+Packaged: 2010-03-01 02:33:18 UTC; dsco036
 Repository: CRAN
-Repository/R-Forge/Project: rmetrics
-Repository/R-Forge/Revision: 4521
-Date/Publication: 2009-10-28 07:55:40
-Packaged: 2009-10-10 20:07:02 UTC; rforge
+Date/Publication: 2010-03-01 06:57:48
