--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SkewHyperbolic
 Type: Package
-Version: 0.2-0
-Date: 2010-02-10
-Title: The Skew Hyperbolic Student t-distribution
+Version: 0.3-1
+Date: 2012-04-13
+Title: The Skew Hyperbolic Student t-Distribution
 Author: David Scott <d.scott@auckland.ac.nz>, Fiona Grimson
 Maintainer: David Scott <d.scott@auckland.ac.nz>
-Depends: R (>= 2.3.0), DistributionUtils, GeneralizedHyperbolic
+Depends: R (>= 2.3.0), DistributionUtils, GeneralizedHyperbolic, RUnit
 Encoding: latin1
 Description: Functions are provided for the density function,
         distribution function, quantiles and random number generation
@@ -16,7 +16,6 @@ Description: Functions are provided for the density function,
         about any centre. To assess goodness of fit, there are
         functions to generate a Q-Q plot and a P-P plot.
 License: GPL (>= 2)
-LazyLoad: yes
-Packaged: 2010-03-01 02:33:18 UTC; dsco036
+Packaged: 2012-04-13 12:48:38 UTC; dsco036
 Repository: CRAN
-Date/Publication: 2010-03-01 06:57:48
+Date/Publication: 2012-04-13 20:32:59
